--- a/cms_styles.html
+++ b/cms_styles.html
@@ -78,13 +78,19 @@
     border-radius:12px;
     color:#111827;
     cursor:pointer;
-    transition:.15s ease;
+    transition:background .2s ease, transform .2s ease, box-shadow .2s ease, border-color .2s ease, color .2s ease;
     text-align:left;
   }
-  .tabbtn:hover{ border-color:#d7dbe0; transform:translateY(-1px); }
+  .tabbtn:hover{
+    background:rgba(79,70,229,0.12);
+    border-color:rgba(79,70,229,0.35);
+    box-shadow:0 10px 24px rgba(79,70,229,0.15);
+    transform:translateY(-2px) scale(1.01);
+  }
   .tabbtn.active{
-    background:rgba(79,70,229,.08);
-    border-color:rgba(79,70,229,.35);
+    background:rgba(79,70,229,.18);
+    border-color:rgba(79,70,229,.55);
+    box-shadow:0 12px 28px rgba(79,70,229,0.22);
     color:var(--pri);
     font-weight:600;
   }
