Refine dashboard weekly blocks layout

--- a/cms_index.html
+++ b/cms_index.html
@@ -29,10 +29,6 @@
         <!-- NAV: GIỮ id="menu" (JS cũ có thể gắn sự kiện vào đây) -->
         <nav id="menu" class="menu-vertical"></nav>
 
-        <div class="quick">
-          <button class="btn block" onclick="document.getElementById('dlg_customer').showModal()">+ Khách hàng</button>
-          <button class="btn block" onclick="document.getElementById('dlg_loan').showModal()">+ Hợp đồng</button>
-        </div>
       </aside>
 
       <main class="content">
@@ -101,7 +97,7 @@
             <button class="btn" onclick="loadDashboardWeekBlocks()">Áp dụng</button>
           </div>
 
-          <div class="grid-2">
+          <div class="dash-week-grid">
             <div class="card">
               <div class="card-head">Hợp đồng tạo trong tuần</div>
               <div class="card-body">
