Add dashboard feature overview card

--- a/cms_index.html
+++ b/cms_index.html
@@ -168,6 +168,47 @@
               </div>
             </div>
           </div>
+
+          <div class="card m24">
+            <div class="card-head">Mô tả các chức năng chính</div>
+            <div class="card-body">
+              <p class="muted">Tổng hợp nhanh những gì bạn có thể làm trong hệ thống Web Quản Trị.</p>
+              <div class="feature-grid">
+                <div class="feature">
+                  <div class="feature-title">Tổng quan</div>
+                  <p>Theo dõi KPI tài chính, khách hàng và hợp đồng với khả năng tuỳ chỉnh hiển thị.</p>
+                </div>
+                <div class="feature">
+                  <div class="feature-title">Khách hàng</div>
+                  <p>Quản lý danh sách khách hàng, tìm kiếm, thêm mới và xem thông tin chi tiết.</p>
+                </div>
+                <div class="feature">
+                  <div class="feature-title">Hợp đồng</div>
+                  <p>Tra cứu các hợp đồng vay, lọc nhanh theo mã hoặc khách hàng và thực hiện cập nhật.</p>
+                </div>
+                <div class="feature">
+                  <div class="feature-title">Khoản vay &amp; Thanh toán</div>
+                  <p>Tạo phiếu thanh toán theo kỳ hoặc khoảng ngày, xem lịch kỳ sắp tới và ghi nhận giao dịch.</p>
+                </div>
+                <div class="feature">
+                  <div class="feature-title">Lịch sử thanh toán</div>
+                  <p>Xem lại toàn bộ giao dịch đã thu, lọc theo thời gian, loại tiền và hợp đồng.</p>
+                </div>
+                <div class="feature">
+                  <div class="feature-title">CRM</div>
+                  <p>Lưu vết tương tác với khách hàng, quản lý công việc và chăm sóc qua nhiều kênh.</p>
+                </div>
+                <div class="feature">
+                  <div class="feature-title">Nhóm Telegram</div>
+                  <p>Điều phối thông báo và cấu hình nhóm trao đổi nội bộ ngay trong hệ thống.</p>
+                </div>
+                <div class="feature">
+                  <div class="feature-title">Cấu hình &amp; Phân quyền</div>
+                  <p>Tuỳ chỉnh KPI hiển thị, quản lý tài khoản đăng nhập và phân quyền truy cập theo nhu cầu.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
         <!-- ========== CUSTOMERS ========== -->
