--- a/cms_styles.html
+++ b/cms_styles.html
@@ -242,6 +242,36 @@
     70%{ box-shadow:0 0 0 10px rgba(34,197,94,0); }
     100%{ box-shadow:0 0 0 0 rgba(34,197,94,0); }
   }
+  .dash-week{
+    margin-top:24px;
+    display:flex;
+    flex-direction:column;
+    gap:12px;
+  }
+  .dash-week-head{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    flex-wrap:wrap;
+    gap:12px;
+  }
+  .dash-week-label{
+    font-weight:700;
+    font-size:16px;
+    color:#1f2937;
+  }
+  .dash-week-filter{
+    display:flex;
+    align-items:center;
+    gap:8px;
+  }
+  .dash-week-filter label{
+    font-size:13px;
+    color:var(--muted);
+  }
+  .dash-week-filter select{
+    min-width:128px;
+  }
   .dash-week-grid{
     display:grid;
     grid-template-columns:repeat(2, minmax(0, 1fr));
