--- a/cms_styles.html
+++ b/cms_styles.html
@@ -46,12 +46,52 @@
     border-bottom:1px solid var(--border);
   }
   .brand{ font-weight:700; letter-spacing:.2px; }
+  .auth-status{
+    font-size:13px;
+    background:rgba(79,70,229,0.08);
+    border:1px solid rgba(79,70,229,0.25);
+    color:var(--pri);
+    padding:6px 10px;
+    border-radius:999px;
+    margin-right:12px;
+  }
 
   .app{
     display:grid;
     grid-template-columns: 240px 1fr;
     gap:16px;
     padding:16px;
+  }
+
+  .login-blocker{
+    position:fixed;
+    inset:56px 0 0 0;
+    background:rgba(15,23,42,0.65);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    z-index:120;
+    padding:24px;
+  }
+  body.needs-login .app{ pointer-events:none; }
+  body.needs-login #login_blocker{ pointer-events:auto; }
+  .login-blocker.hidden{ display:none !important; }
+  .login-blocker-card{
+    max-width:360px;
+    width:100%;
+    padding:24px;
+    background:#fff;
+    border-radius:var(--radius);
+    box-shadow:0 20px 45px rgba(15,23,42,0.25);
+    text-align:center;
+    display:flex;
+    flex-direction:column;
+    gap:16px;
+  }
+  .login-blocker-title{
+    font-size:18px;
+    font-weight:700;
+    color:var(--pri);
   }
 
   /* Sidebar (menu dọc) */
