--- a/cms_index.html
+++ b/cms_index.html
@@ -6,7 +6,7 @@
     <title>Web Quản Trị</title>
     <?!= include('cms_styles'); ?>
   </head>
-  <body>
+  <body class="needs-login">
     <!-- TOPBAR -->
     <header class="topbar">
       <div class="brand">Web Quản Trị</div>
@@ -18,7 +18,7 @@
 
     <!-- ========== LAYOUT VỚI SIDEBAR TRÁI ========== -->
     <div class="app">
-      <div id="login_blocker" class="login-blocker hidden">
+      <div id="login_blocker" class="login-blocker">
         <div class="login-blocker-card">
           <div class="login-blocker-title">Vui lòng đăng nhập</div>
           <p>Đăng nhập để xem và thao tác dữ liệu quản trị. Liên hệ quản trị viên nếu bạn chưa có tài khoản.</p>
