--- a/cms_login.html
+++ b/cms_login.html
@@ -1,22 +1,24 @@
 <dialog id="dlg_login" class="modal">
-  <div class="head">Đăng nhập tài khoản nội bộ</div>
-  <div class="body">
-    <div class="row">
-      <div class="col-12">
-        <label>Tài khoản</label>
-        <input id="login_user" />
+  <div class="box">
+    <div class="head">
+      <div class="title">Đăng nhập tài khoản nội bộ</div>
+    </div>
+    <div class="body">
+      <div class="field">
+        <label for="login_user">Tài khoản</label>
+        <input id="login_user" class="input" type="text" autocomplete="username" />
       </div>
-      <div class="col-12">
-        <label>Mật khẩu</label>
-        <input id="login_pass" type="password" />
+      <div class="field">
+        <label for="login_pass">Mật khẩu</label>
+        <input id="login_pass" class="input" type="password" autocomplete="current-password" />
+      </div>
+      <div class="muted" style="margin-top:8px">
+        Bạn cũng có thể đăng nhập Google (nếu email của bạn nằm trong danh sách cho phép).
       </div>
     </div>
-    <div class="muted" style="margin-top:8px">
-      Bạn cũng có thể đăng nhập Google (nếu email của bạn nằm trong danh sách cho phép).
+    <div class="foot">
+      <button class="btn" type="button" onclick="document.getElementById('dlg_login').close()">Đóng</button>
+      <button class="btn primary" type="button" id="btn_login_do">Đăng nhập</button>
     </div>
-  </div>
-  <div class="foot">
-    <button class="btn" onclick="document.getElementById('dlg_login').close()">Đóng</button>
-    <button class="btn primary" id="btn_login_do">Đăng nhập</button>
   </div>
 </dialog>
